# loris_framework

./: .clang-format  CMakeLists.txt  COPYRIGHT  Doxyfile  README.md  add_doxygen_comment.py
code_generator/: CMakeLists.txt  code_generator.py
code_generator/idl/: mod_helloworld.idl  mod_lang_compile_I.idl  mod_lang_parse_I.idl  mod_lang_vm_I.idl
code_generator/json_output/: CMakeLists.txt  json_output  lex.l  std_list.h  yacc.y
code_generator/template/: macro2.jinja2  module_pub_inc_h.jinja2  pri_inc_inst_h.jinja2  pri_script_nl.jinja2  pri_src_CMakeListsTxt.jinja2  pri_src_bundle_c.jinja2  pri_src_inst_c.jinja2  pri_src_stub_rpc_c.jinja2  pri_src_stub_rpc_call_c.jinja2  pri_src_stub_shell_c.jinja2  pub_desc.jinja2
deploy/Debug/: loris_framework
deploy/Debug/bundle/mod_lang_parse_I/: desc.json
deploy/Debug/bundle/mod_lang_vm_I/: desc.json
deploy/Debug/bundle/mod_thread_pool_I/: desc.json
deploy/Debug/script/: init_script.nl  mod_lang_compile_I_test.nl  mod_lang_vm_I_test.nl  shell_lib.c  test10.nl  test13.nl  test4.nl  test6.nl  test7.nl  test8.nl  test_all.nl
files/: Makefile
files/dynamic_exec/: Makefile
files/script/: test_all.nl  test_andor_math.nl  test_array.nl  test_array_to_string.nl  test_for.nl  test_hash.nl  test_hash_hash.nl  test_hash_link.nl  test_ifelse.nl  test_lifetime.nl  test_make_array.nl  test_new_array_size.nl  test_or3.nl  test_return.nl  test_string_to_array.nl  test_tuple.nl  test_type_check.nl  test_var.nl  test_var_math.nl  test_while.nl
files/script/leetcode/: 12_int_to_roman.nl  13_roman_to_int.nl  13_roman_to_int_2.nl  14_longest_common_prefix.nl  1_two_sum.nl  1_two_sum_2.nl  20_valid_parentness.nl  21_merge_two_sorted_linked_list.nl  2_add_two_number.nl  35_search_insert_position.nl  70_climb_stairs.nl  9_palindrome_number.nl  two_sum.nl  two_sum_2.nl
files/script/lib/: array_to_single_list.nl  hash_to_stack.nl
src/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/framework/private/include/: mod_bundle_imp.h  mod_imp.h  std_hazard_ptr_imp.h  std_lock_free_key_hash_imp.h  std_lock_free_list_imp.h
src/framework/private/src/: main.c  mod.c  mod_bundle.c  mod_ownership.c  std_hazard_ptr.c  std_lock_free_key_hash.c  std_lock_free_list.c  std_log.c  std_random.c  std_safe.c
src/framework/public/include/: json-maker.h  mod.h  mod_bundle.h  mod_ownership.h  rsa.h  std_assert.h  std_common.h  std_def.h  std_hazard_ptr.h  std_lock.h  std_lock_free_key_hash.h  std_lock_free_list.h  std_log.h  std_random.h  std_safe.h  std_typedef.h  tiny-json.h
src/framework/public/src/: Makefile  json-maker.c  rsa.c  tiny-json.c
src/mod_helloworld/: CMakeLists.txt
src/mod_helloworld/mod_helloworld_I/: CMakeLists.txt
src/mod_helloworld/mod_helloworld_I/private/include/: mod_helloworld_I.h
src/mod_helloworld/mod_helloworld_I/private/script/: mod_helloworld_I_test.nl
src/mod_helloworld/mod_helloworld_I/private/src/: mod_helloworld_I.c  mod_helloworld_I_bundle.c
src/mod_helloworld/mod_helloworld_I/private/src/stub/: stub_shell_mod_helloworld_I.c
src/mod_helloworld/mod_helloworld_I/public/: desc.json
src/mod_helloworld/public/include/: mod_helloworld.h
src/mod_lang_compile/mod_lang_compile_I/: CMakeLists.txt
src/mod_lang_compile/mod_lang_compile_I/private/include/: ast_code.h  ast_compile.h  mod_lang_compile_I.h
src/mod_lang_compile/mod_lang_compile_I/private/src/: ast_code.c  ast_compile.c  lang_ast.c  mod_lang_compile_I.c  mod_lang_compile_I_bundle.c
src/mod_lang_compile/mod_lang_compile_I/public/: desc.json
src/mod_lang_compile/public/include/: lang_ast.h  mod_lang_compile.h
src/mod_lang_parse/mod_lang_parse_I/: CMakeLists.txt
src/mod_lang_parse/mod_lang_parse_I/private/include/: lang_lex.h  lang_parse.h  mod_lang_parse_I.h
src/mod_lang_parse/mod_lang_parse_I/private/script/: mod_lang_parse_I_test.nl
src/mod_lang_parse/mod_lang_parse_I/private/src/: lang_lex.c  lang_parse.c  mod_lang_parse_I.c  mod_lang_parse_I_bundle.c
src/mod_lang_parse/public/include/: mod_lang_parse.h
src/mod_lang_vm/mod_lang_vm_I/: CMakeLists.txt
src/mod_lang_vm/mod_lang_vm_I/private/include/: mod_lang_vm_I.h  virtual_machine.h  virtual_machine_EXEC.h  virtual_machine_READ.h  virtual_machine_array_type.h  virtual_machine_hash_type.h  virtual_machine_library.h  virtual_machine_object.h  virtual_machine_safe_var.h  virtual_machine_tuple_type.h  virtual_machine_var_type.h
src/mod_lang_vm/mod_lang_vm_I/private/src/: mod_lang_vm_I.c  mod_lang_vm_I_bundle.c  virtual_machine.c  virtual_machine_EXEC.c  virtual_machine_EXEC_CODE.c  virtual_machine_EXEC_CODEGEN.c  virtual_machine_READ.c  virtual_machine_array_type.c  virtual_machine_hash_type.c  virtual_machine_library.c  virtual_machine_object.c  virtual_machine_safe_var.c  virtual_machine_tuple_type.c  virtual_machine_var_type.c
src/mod_lang_vm/public/include/: mod_lang_vm.h
src/mod_shell/mod_shell_I/: CMakeLists.txt
src/mod_shell/mod_shell_I/private/include/: mod_shell_I.h  shell.h
src/mod_shell/mod_shell_I/private/script/: profile.nl  test1.nl  test11.nl  test12.nl  test14.nl  test15.nl  test2.nl  test3.nl  test4.nl  test5.nl  test7.nl  test9.nl  test_1.nl  test_2.nl  test_3.nl  test_all.nl  test_arg.nl  test_array.nl  test_hash_hash_hash.nl  test_hash_tuple.nl  test_make_parse_json.nl  test_profile.nl
src/mod_shell/mod_shell_I/private/src/: mod_shell_I.c  mod_shell_I_bundle.c  shell.c
src/mod_shell/mod_shell_I/public/: desc.json
src/mod_shell/public/include/: mod_shell.h
src/mod_thread_pool/mod_thread_pool_I/: CMakeLists.txt
src/mod_thread_pool/mod_thread_pool_I/private/include/: mod_thread_pool_I.h
src/mod_thread_pool/mod_thread_pool_I/private/src/: mod_thread_pool_I.c  mod_thread_pool_I_bundle.c
src/mod_thread_pool/mod_thread_pool_I/private/src/stub/: stub_shell_mod_thread_pool_I.c
src/mod_thread_pool/public/include/: mod_thread_pool.h  thpool.h
src/mod_thread_pool/public/src/: Makefile  thpool.c
